--- a/detail.html
+++ b/detail.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Qr menu-Detay Sayfası</title>
-    <title>Qr menu</title>
+    <title>CEFELIF Detay Sayfası</title>
+    <title>CAFELIF</title>
     <!--  * bs css link -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
